# choose-your-way

./: .gitignore  .pre-commit-config.yaml  ASSETS.md  ChooseYourWay.bat  README.md  __main__.py  pyproject.toml  server.bat  server.py  x.py
.github/workflows/: tests.yml
New folder/: client.py  server.py
assets/maps/: level1.tmx  level2.tmx
bench/: bench_mobs.py
config/: assets.yaml  panels.yaml
maps/: Tiled Map.tmx  level2.tmx
scripts/: application.py  bullet.py  button.py  client.py  game.py  input_box.py  level.py  menu.py  muzzle_flash.py  object.py  player.py  player_info.py  room.py  server.py  settings.py  team.py  test.py  text.py  tilemap.py  zombie.py
scripts/default/: application.py  button.py  buttonxx.py  image.py  inputBox.py  object.py  path.py  text.py
scripts/server/: server.py  settings.py
src/app/: game.py  server_app.py
src/gameplay/: base.py  bullet.py  camera.py  collision.py  entity.py  game_sprite.py  map.py  mob.py  muzzle_flash.py  player.py  spatial_grid.py  tiles.py
src/gui/: button.py  input_box.py  menu.py  object.py  text.py
src/net/: client.py  game_server.py  network.py  player_info.py  protocol.py  room.py  server.py  transport.py
src/ui/: widgets.py
src/util/: constants.py  database.py
tests/: _util.py  conftest.py  test_collision.py  test_e2e.py  test_game_server.py  test_network.py  test_protocol.py  test_spatial_grid.py  test_transport.py
